Bug 332303 - kmag should remember last used zoom mode
Summary: kmag should remember last used zoom mode
Status: RESOLVED FIXED
Alias: None
Product: kmag
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR minor
Target Milestone: ---
Assignee: sarang
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-19 07:28 UTC by Janet
Modified: 2017-05-02 00:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2014-03-19 07:28:12 UTC
My preferred kmag mode is that the view follows the mouse. But I have to click the cursor button every time I start kmag, it does not remember that setting. IMHO kmag should start with the last used mode. Alternativly there could be an option to let it start with a special mode or the last used mode or neutral.

I'm using KDE SC 4.12.3.

Reproducible: Always
Comment 1 Christoph Feck 2014-10-26 01:54:02 UTC
Regression caused by http://commits.kde.org/kmag/2278a10a069ed436d0167ae3ef099b020e35f663

As far as I understand it, the idea was to apply some automatic mode at startup, which combined the "follow mouse" and the "follow focus" mode.

On my system, however, it does not apply any mode, because the focus tracking is not compiled in.
Comment 2 Jeremy Whiting 2017-05-02 00:18:10 UTC
Git commit 4419029b67676c6ed9e70d5dd8661a5923bc4f72 by Jeremy Whiting.
Committed on 02/05/2017 at 00:17.
Pushed by whiting into branch 'master'.

Use mode reading code for now to fix saving/loading the chosen mode.

M  +2    -2    kmag.cpp

https://commits.kde.org/kmag/4419029b67676c6ed9e70d5dd8661a5923bc4f72