Use mode reading code for now to fix saving/loading the chosen mode.

BUG:332303